--- a/pom.xml
+++ b/pom.xml
@@ -175,9 +175,9 @@
                 <version>3.5</version>
             </dependency>
             <dependency>
-                <groupId>commons-configuration</groupId>
-                <artifactId>commons-configuration</artifactId>
-                <version>1.10</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-configuration2</artifactId>
+                <version>2.2</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
